Fixing Marketplace photo spacing (vertical-align issue). Removing default styles on list items. Fixing drop shadow issue on wire items causing weird overlap when wire expands.

--- a/app/stylesheets/base/_reset.scss
+++ b/app/stylesheets/base/_reset.scss
@@ -29,7 +29,11 @@ footer,header,hgroup,menu,nav,section {
 }
 
 ul {
-    list-style:none;
+    list-style-type: none;
+}
+
+li {
+    list-style-type: none;
 }
 
 blockquote, q {
