--- a/app/stylesheets/layout/_wire.sass
+++ b/app/stylesheets/layout/_wire.sass
@@ -213,19 +213,21 @@
             margin: auto
 
   .photo-container
-    width: 535px /* for instance */
+    width: 535px
     //display: table
     overflow: hidden
     max-height: 550px
-    &:after 
+    //&:after 
       content: ""
       display: table
       clear: both
-    table-layout: fixed
-    ul 
+      table-layout: fixed
+    ul.multi-photo
+      //display: table
       display: table-row 
     ul li 
       display: table-cell
+      vertical-align: top !important
     img 
       width: 100%
       padding-right: 10px
