--- a/app/stylesheets/modules/_wire.sass
+++ b/app/stylesheets/modules/_wire.sass
@@ -54,10 +54,11 @@
                 color: #aaa
         .wire-item 
           background: white
-          //box-shadow: 0px 1px 3px rgba(0,0,0,0.65)
-          -moz-box-shadow: 1px 1px 4px rgba(0,0,0,0.4)
-          -webkit-filter: drop-shadow(1px 1px 4px rgba(0,0,0,0.4))
-          filter: drop-shadow(1px 1px 4px rgba(0,0,0,0.4))
+          //box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.5)
+          box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.5)
+          //-moz-box-shadow: 1px 1px 4px rgba(0,0,0,0.4)
+          //-webkit-filter: drop-shadow(1px 1px 4px rgba(0,0,0,0.4))
+          //filter: drop-shadow(1px 1px 4px rgba(0,0,0,0.4))
           padding: 5px
           position: relative
           &:after, &:before
@@ -202,6 +203,8 @@
               background-position: center center
               border: 4px solid white
               background-color: #f6f4ed
+              //box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.5)
+              box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.5)
             p.venue, p.address
               margin-bottom: 5px
               span.bold
@@ -388,7 +391,8 @@
       .wire-empty-message, div.loading
         color: #fff
         text-align: center
-        padding: 8px
+        padding: 8px 0px
+        width: 575px
         border-radius: 5px
         background-color: rgba(0,0,0,0.25)
         text-shadow: 1px 1px 1px rgba(0,0,0,0.85)
